--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
 
     // RecyclerView animator
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
+
+    // Coil for images
+    implementation("io.coil-kt:coil:1.1.0")
 }
